# gpt-researcher

./: pyproject.toml
frontend/nextjs/: bun.lockb
frontend/nextjs/app/: page.tsx
gpt_researcher/config/: config.py
gpt_researcher/llm_provider/generic/: base.py
gpt_researcher/master/: actions.py  agent.py  prompts.py
gpt_researcher/utils/: llm.py  url_keeper.py
scripts/: quick_open.py
