[project]
name = "gpt-researcher"
version = "0.9.1"
description = "GPT Researcher is an autonomous agent designed for comprehensive online research on a variety of tasks."
authors = [
    { name = "Assaf Elovic", email = "assaf.elovic@gmail.com" }
]
dependencies = [
    "pymupdf>=1.24.9",
    "aiofiles>=24.1.0",
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "htmldocx>=0.0.6",
    "json5",
    "json_repair",
    "langchain>=0.2.15",
    "langchain-openai>=0.1.23",
    "langchain_community>=0.2, <0.3",
    "loguru",
    "lxml_html_clean",
    "markdown>=3.7",
    "md2pdf>=1.0.1",
    "mistune>=3.0.2",
    "pydantic>=2.8.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tiktoken",
    "unstructured>=0.15.9",
    "websockets",
    "uvicorn>=0.30.6",
    "langgraph>=0.2.15",
    "duckduckgo-search>=6.2.11",
    "openai>=1.43.0",
    "fastapi>=0.112.2",
    "langchain-community>=0.2.15",
    "tavily-python>=0.4.0",
    "permchain>=0.0.8",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.32",
    "lxml>=5.3.0",
    "langchain-google-genai>=1.0.10",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_researcher"]
